--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     ART GALLERY
                 </span>
             </h1>
-            <div class="artboxgalery" onclick="window.location.href=`//127.0.0.1:5500/home.html`">
+            <div class="artboxgalery" onclick="window.location.href=`127.0.0.1:5500/home.html`">
                 <p class="text"> 
                      The arts in the collection of the Modern Art Gallery all started from a spark of inspiration. Will these pieces inspire you? Visit us and find out.
                 </p>
