--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <div class="buttons button-area" onclick="window.location.href=`http://127.0.0.1:5500/index.html`">
+    <div class="buttons button-area" onclick="window.location.href=`index.html`">
         <div class="arrow">
             <svg width="10" height="26" viewBox="0 0 10 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M9 25L1 13L9 1" stroke="white"/>
